[package]
name = "rust-toolchain-manifest"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = [ "serde" ] }
clap = { version = "4.0.26", features = [ "derive" ] }
serde = { version = "1.0.147", features = ["derive"] }
target-lexicon = { version = "0.12.5", features = [ "std" ] }
thiserror = "1.0.37"
toml = "0.5.9"
