[package]
name = "rustup-toolchain-manifest"
authors = ["Francis Russell <francis@unchartedbackwaters.co.uk>"]
version = "0.2.1"
edition = "2021"
license = "BSD-3-Clause"
description = "Parses the Rust toolchain manifest"
keywords = ["toolchain", "manifest"]
repository = "https://github.com/FrancisRussell/rustup-toolchain-manifest.git"

[dependencies]
basic-toml = "0.1.0"
chrono = { version = "0.4.23", default-features = false, features = [ "serde" ] }
serde = { version = "1.0.147", features = ["derive"] }
target-lexicon = { version = "0.12.5", features = [ "std" ] }
thiserror = "1.0.37"

[dev-dependencies]
clap = { version = "4.0.26", features = [ "derive" ] }
reqwest = { version = "0.11.14", features = ["blocking"] }
